# uav-autonomous-landing

./: CMakeLists.txt  LICENSE  README.md  boxplot.py  errors.py  errors_life_long.py  installDependencies.sh  install_dependencies.sh  plot_errors.py  trajectories.py  trajectories_life_long.py
ardrone_moves/: CMakeLists.txt  package.xml
ardrone_moves/launch/: ardrone_moves.launch
ardrone_moves/src/: ardrone_moves.cpp
ped_traj_pred/: CMakeLists.txt  package.xml  rosdep.yaml
ped_traj_pred/include/ped_traj_pred/: kalman_xy_pos.hpp  ped_traj_pred.hpp  predict_filter.hpp
ped_traj_pred/launch/: kalman_pred.launch
ped_traj_pred/msg/: PathWithId.msg
ped_traj_pred/src/: kalman_xy_pos.cpp  ped_traj_pred.cpp  predict_filter.cpp
summit_moves/: CMakeLists.txt  package.xml
summit_moves/launch/: empty_world.launch~.xml  summit_moves.launch
summit_moves/src/: summit_moves.cpp
takeoff/: CMakeLists.txt  package.xml
takeoff/launch/: ardrone_teleop.launch  both.launch  only_quad_real.launch
takeoff/msg/: GroundtruthAltitude.msg
takeoff/rviz_config/: summit_with_quadrotor.rviz
takeoff/src/: ardrone_joystick.cpp  robot_state_broadcaster.cpp  takeoff.cpp
takeoff/worlds/: final_world.world~  jjaa_world.world~  takeoff.world
uav_vision/: CMakeLists.txt  package.xml
uav_vision/launch/: detection_tracking.launch  my_aruco.launch  platform_detection.launch  platform_detection_real.launch  platform_tracking.launch  platform_tracking_real.launch
uav_vision/src/: platform_detection.cpp  platform_detection_real.cpp  platform_tracking.cpp  platform_tracking_real.cpp
